--- a/contactInterface.html
+++ b/contactInterface.html
@@ -6,12 +6,12 @@
 			}
 			
 			function sendEmail() {
-				var txtEmail = document.getElementById("email").value
-				var txtName = document.getElementById("name").value
-				var txtPhoneNum = document.getElementById("phoneNumber").value
-				var txtContent = document.getElementById("content").value
+				var txtEmail = document.getElementById("email").value;
+				var txtName = document.getElementById("name").value;
+				var txtPhoneNum = document.getElementById("phoneNumber").value;
+				var txtContent = document.getElementById("content").value;
 
-				if txtEmail = "" || txtName = "" || txtPhoneNum = "" || txtContent = "" {
+				if (txtEmail = "" || txtName = "" || txtPhoneNum = "" || txtContent = "") {
 					alert("Khong duoc de trong!")
 				else {
 					if checkEmailAddress()= true {
