--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 			<tr><td>Họ tên:Giáp Văn Thành Đạt</td></tr>
 			<tr> <td>Số điện thoại:0333230603</td></tr>
 			<tr> <td>Ngày sinh:23/06/2003</td></tr>
+			
+			<tr><td>Họ tên:Giáp Thị Lý</td></tr>
+			<tr> <td>Số điện thoại:0378847294</td></tr>
+			<tr> <td>Ngày sinh:07/04/1997</td></tr>
 		</table>
+		
 	</body>
 
 </html>
