--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 			<tr><td>Họ tên:Giáp Thị Lý</td></tr>
 			<tr> <td>Số điện thoại:0378847294</td></tr>
 			<tr> <td>Ngày sinh:07/04/1997</td></tr>
+			
+			<tr><td>Họ tên:Giáp Thị Lý</td></tr>
+			<tr> <td>Số điện thoại:0378847294</td></tr>
+			<tr> <td>Ngày sinh:07/04/1997</td></tr>
 		</table>
 		
 	</body>
