--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <tr>
             <td>Ngày sinh:23/06/1997</td>
         </tr>
+	    
+	    <tr>
+            <td>Họ tên:Giáp Thị Lý</td>
+        
+		    <td>Số điện thoại:0333230603</td>
+            <td>Ngày sinh:23/06/1997</td>
+        </tr>
     </table>
 		<script>
 			function search() {
