--- a/Login/index.html
+++ b/Login/index.html
@@ -1,49 +1,13 @@
-<html>
-	<head>
-		<title>Login</title>
-	<head>
-	<body>
-		<form>
-			<label>Username</label>
-			<input class="name" type="text" placeholder="Vui lòng nhập tên tài khoản"><br>
-
-			<label>Password</label>
-			<input class="pass" type="password" placeholder="Vui lòng nhập mật khẩu"><br>
-
-			<input class="login" type="submit">Login</input><br>
-			<p>No register? <a href="">Create a new account</a></p>
-		</form>
-	</body>
-	<script>
-		const userName = document.querySelector(".name")
-		const passWord = document.querySelector(".pass")
-		const btn_submit = document.querySelector(".login")
-
-		var name = "admin"
-		var pass = "12345678"
-
-		btn_submit.onclick = (i) => {
-    		i.preventDefault();
-    		if(userName.value=="") {
-        		alert("Bạn phải nhập tên")
-        		return false
-    		}
-    		if(passWord.value=="") {
-        		alert("Bạn phải nhập mật khẩu")
-        		return false
-    		}
-    		if(userName.value != name && passWord.value != pass) {
-        		alert("Bạn nhập sai tên hoặc mật khẩu")
-        		return false
-    		} else {
-        		alert("Đăng nhập thành công")
-        		return true
- 	   	}
-	}
-			
-	</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	<h1>Giap Van Thanh Dat</h1>
+	
+</body>
 </html>
-
-
-
- 
